--- a/_research/2.flowers.md
+++ b/_research/2.flowers.md
@@ -1,13 +1,10 @@
 ---
 title: Understanding the dimensions of biodiversity
 image: 
-  path: /images/BIRD.jpg
-  thumbnail: /images/BIRD.jpg
+  path: /images/bird.JPG
+  thumbnail: /images/bird.JPG
   caption: ""
 ---
-
-
-
 
 What is the scope and role of life on Earth?
 
