--- a/_research/0.darte.md
+++ b/_research/0.darte.md
@@ -11,7 +11,12 @@ Improved detection and quantification of antibiotic resistant genes and organism
 The global spread of antimicrobial-resistant (AMR) organisms and spread of AMR-associated genes poses a serious threat to the safety of our food and public health while being responsible for increased hospitalization and mortality of both humans and production animals.  The release of AMR genes and organisms and microbes in the environment from agricultural sources is considered a serious threat but little is known about their persistence and spread in the environment.  Current risk assessment models cannot adequately characterize and quantify the proliferation of resistance.  We are developing a sequence-based approach that will provide considerably improved detection and quantification of antibiotic resistant genes including greater breadth in the numbers of genes that can be detected, the identify of microorganisms carrying these genes, and the likely association of these genes with transfer mechanisms (Diversity of Antibiotic Resistance Genes and Transfer Elements - Quantitative Monitoring, DARTE-QM).  By demonstrating this approach in both laboratory model systems and the field, we hope to identify critical control points that may be sensitive to mitigation of emergence, spread, and persistence of resistance in the environment.   Synergistic with this effort, we also are studying the occurrence and transport of antibiotics, antibiotic-resistant bacteria (ARB), and antibiotic resistance genes (ARG) in tile-drained agricultural fields that receive manure application.  We will determine the effect of manure application timing, tillage, and patterns of rainfall/drainage on the persistence and losses of antibiotics, ARB, and ARG in soil and drainage water and determine the effects of alternative manure treatment and storage on the persistence of antibiotics, ARB, and ARG in manure.
 
 ## Collaborators 
-This effort is a fantastic collaboration with Iowa State University ([Michelle Soupir](http://www.public.iastate.edu/~msoupir/)), the USDA ([Heather Allen](http://www.ars.usda.gov/pandp/people/people.htm?personid=44876) and [Tom Moorman](http://www.ars.usda.gov/pandp/people/people.htm?personid=3940)), and Grinnell College ([Shannon Hinsa](https://www.grinnell.edu/users/hinsa)).
+Diana Aga, University of Buffalo
+Heather Allen, USDA-ARS
+Shannon Hinsa, Grinnell College
+Thomas Moorman, USDA-ARS
+Nicole Ricker, ISU/USDA-ARS
+Michelle Soupir, ISU
 
 ## Funding
 USDA NIFA  
