--- a/_research/1.cobs.md
+++ b/_research/1.cobs.md
@@ -6,9 +6,11 @@ image:
   caption: ""
 ---
 
-What ecoystem services are provided by microbes for our soils?
+How can microbes help us achieve sustainable agricultural productivity?
 
-Using a data-driven and integrated modeling framework, we collaborate with researchers who will develop the predictive capability to determine which feedstock combinations, regions and land types, market conditions, and bioproducts have the potential to support the ecologically and economically sustainable displacement of fossil fuels. Soils represent the most challenging ecosystem for microbial studies because of its extraordinary high diversity and structural complexity. Similar to their role in our gut systems, microbial communities drive nutrient cycling in the soil. In particular, our area of emphasis will be to obtain a mechanistic understanding of the plant, soil, microbe, and climate interactions that underlie the productivity and ecosystem services of different feedstocks.
+Bioenergy crops are crops grown specifically for the purpose of converting biomass or compartments of plants into biofuels or bioproducts. These crops are part of our plan to meet our energy demands of the future, but we need to learn to grow these crops in new ways. For example, we want to grow these crops in 'marginal' lands that may not have as much water or nutrients as traditional food crops.  We also want to be thoughtful of 'how' we grow these crops, ensuring that they efficiently provide biomass while not impairing soil or water quality in their production.
+
+Generally, plants and microbes form symbiotic associations, and these relationships often benefit the plant host. These functions can include tolerance to stress, such as drought, or making nutrients and resources more available to the plant.  The benefits that microbiomes can provide to plants and specifically for bionergy crops is a large part of our research program.  We want to understand how microbes are involved in nutrient cycling and losses, plant protection and resilience, and the impacts of management on the plant-microbe system.
 
 ## Collaborators
 Emily Heaton, ISU
