--- a/_research/1.cobs.md
+++ b/_research/1.cobs.md
@@ -12,6 +12,11 @@ Bioenergy crops are crops grown specifically for the purpose of converting bioma
 
 Generally, plants and microbes form symbiotic associations, and these relationships often benefit the plant host. These functions can include tolerance to stress, such as drought, or making nutrients and resources more available to the plant.  The benefits that microbiomes can provide to plants and specifically for bionergy crops is a large part of our research program.  We want to understand how microbes are involved in nutrient cycling and losses, plant protection and resilience, and the impacts of management on the plant-microbe system.
 
+We hope to improve understanding of the underlying mechanisms governing the plant-soil-microbe
+interactions that explain key feedstock traits, such as yield, effects on soil carbon storage, and water and
+nitrogen use efficiencies.  This information will help us to predict the sustainability of different feedstocks and inform the economic viability and environmental outcomes associated with the production of different biofuels and
+bioproducts. 
+
 ## Collaborators
 Emily Heaton, ISU
 Andrew Vanloocke, ISU
