--- a/_research/1.cobs.md
+++ b/_research/1.cobs.md
@@ -1,5 +1,5 @@
 ---
-title: "Microbial drivers of soil health in bioenergy crops"
+title: "Microbiomes and sustainable bioenergy production"
 image: 
   path: /images/cobs.jpg
   thumbnail: /images/cobs.jpg
