--- a/_research/1.cobs.md
+++ b/_research/1.cobs.md
@@ -8,14 +8,13 @@ image:
 
 How can microbes help us achieve sustainable agricultural productivity?
 
-Bioenergy crops are crops grown specifically for the purpose of converting biomass or compartments of plants into biofuels or bioproducts. These crops are part of our plan to meet our energy demands of the future, but we need to learn to grow these crops in new ways. For example, we want to grow these crops in 'marginal' lands that may not have as much water or nutrients as traditional food crops.  We also want to be thoughtful of 'how' we grow these crops, ensuring that they efficiently provide biomass while not impairing soil or water quality in their production.
+Bioenergy crops are grown specifically for the purpose of converting plant compartments or biomass into biofuels or bioproducts. They are part of our plan to meet the future's energy demands, and we want to sustainably produce these resources.  For example, we want to utilize 'marginal' lands that may have less water or nutrients than traditional farming systems but do so without creating outputs that would harm the environment. 
 
-Generally, plants and microbes form symbiotic associations, and these relationships often benefit the plant host. These functions can include tolerance to stress, such as drought, or making nutrients and resources more available to the plant.  The benefits that microbiomes can provide to plants and specifically for bionergy crops is a large part of our research program.  We want to understand how microbes are involved in nutrient cycling and losses, plant protection and resilience, and the impacts of management on the plant-microbe system.
+Frequently, plants and microbes form symbiotic associations. These relationships often benefit the host plant, conferring tolerance to drought or other stress or making nutrients and other resources more accessible. The plant-associated microbiome and its potential benefits are a large part of our research program, especially as they apply to bioenergy crops. We want to understand how microbes are involved in nutrient cycling and losses, plant protection and resilience, and the impacts of management on the plant-microbe system.
 
-We hope to improve understanding of the underlying mechanisms governing the plant-soil-microbe
-interactions that explain key feedstock traits, such as yield, effects on soil carbon storage, and water and
-nitrogen use efficiencies.  This information will help us to predict the sustainability of different feedstocks and inform the economic viability and environmental outcomes associated with the production of different biofuels and
-bioproducts. 
+We hope to improve understanding of the underlying mechanisms governing plant-soil-microbe interactions which explain key feedstock traits, such as yield, effects on soil carbon storage, and water and nitrogen use efficiencies. This information will help us predict the sustainability of different feedstocks and inform the economic viability and environmental outcomes associated with the production of various biofuels and bioproducts.
+![image](https://user-images.githubusercontent.com/444212/111198152-40dc6280-858d-11eb-832b-1b3df3f8d47b.png)
+
 
 ## Collaborators
 Emily Heaton, ISU
