--- a/_research/0.darte.md
+++ b/_research/0.darte.md
@@ -6,23 +6,51 @@ image:
   caption: ""
 ---
 
-Improved detection and quantification of antibiotic resistant genes and organisms in the environment
+# The Scoop On Poop: Connecting Manure Management To Antimicrobial Resistance
 
-The global spread of antimicrobial-resistant (AMR) organisms and spread of AMR-associated genes poses a serious threat to the safety of our food and public health while being responsible for increased hospitalization and mortality of both humans and production animals.  The release of AMR genes and organisms and microbes in the environment from agricultural sources is considered a serious threat but little is known about their persistence and spread in the environment.  Current risk assessment models cannot adequately characterize and quantify the proliferation of resistance.  We are developing a sequence-based approach that will provide considerably improved detection and quantification of antibiotic resistant genes including greater breadth in the numbers of genes that can be detected, the identify of microorganisms carrying these genes, and the likely association of these genes with transfer mechanisms (Diversity of Antibiotic Resistance Genes and Transfer Elements - Quantitative Monitoring, DARTE-QM).  By demonstrating this approach in both laboratory model systems and the field, we hope to identify critical control points that may be sensitive to mitigation of emergence, spread, and persistence of resistance in the environment.   Synergistic with this effort, we also are studying the occurrence and transport of antibiotics, antibiotic-resistant bacteria (ARB), and antibiotic resistance genes (ARG) in tile-drained agricultural fields that receive manure application.  We will determine the effect of manure application timing, tillage, and patterns of rainfall/drainage on the persistence and losses of antibiotics, ARB, and ARG in soil and drainage water and determine the effects of alternative manure treatment and storage on the persistence of antibiotics, ARB, and ARG in manure.
+The global spread of antimicrobial-resistant (AMR) organisms and spread of AMR-associated genes poses a serious threat to the safety of our food and public health while being responsible for increased hospitalization and mortality of both humans and production animals.  The release of AMR genes and organisms and microbes in the environment from agricultural sources is considered a serious threat but little is known about their persistence and spread in the environment.  
+
+
+Elevated levels of resistant bacteria and resistance genes are finding their way into the environment through the land application of manure associated with animal production facilities. We propose to combat AMR in these systems by: developing improved tools to better indicate AMR risk in agroecosystems, identifying the best practices for mitigating AMR during manure storage and treatment, and providing a better understanding of how AMR develops during swine manure management. Our results will be directly communicated to producers and stakeholders through our long-standing manure management extension programs. Specifically, we propose to achieve the following research objectives, all of which are integrated into an extension objective to communicate research results with our partners.
 
 ## Collaborators 
 Diana Aga, University of Buffalo
-Heather Allen, USDA-ARS
-Shannon Hinsa, Grinnell College
-Thomas Moorman, USDA-ARS
-Nicole Ricker, ISU/USDA-ARS
+Daniel Andersen, ISU
 Michelle Soupir, ISU
 
 ## Funding
 USDA NIFA  
-USDA Foundational  
-National Pork Board  
-Iowa State University  
-University of Iowa CHEEC  
-University of Iowa CGRER  
 
+# Connecting Antimicrobial Resistance, Agricultural Decisions, And Environmental Systems (CAMRADES)
+
+Our project will inform the effectiveness of mitigation strategies in reducing risk to human
+health in agro-ecosystems by developing an adaptable framework, CAMRADES. We will
+integrate predictive models of AMR transport and associated risk to human health, and improve
+stakeholder understanding of AMR, potential risks and mitigation strategies. Our framework integrates detection of antibiotics, AMR genes and indicator organisms and
+exposure pathways in the environment with hydrologic and water quality monitoring. A key
+output of this effort will be a predictive model of antibiotic and AMR sources, fate, and
+transport, which will be integrated with a novel risk assessment
+
+## Collaborators
+Michelle Soupir, ISU (PI)
+Daniel Andersen, ISU
+Diana Aga, University of Buffalo
+Shannon Bartelt-Hunt (University of Nebraska - Lincoln)
+Amy Schmidt (University of Nebraska - Lincoln)
+Bing Wang (University of Nebraska - Lincoln)
+
+## Funding
+USDA
+
+# Using the Rules of Antibiotic Resistance Development to Inform Wastewater Mitigation Strategies
+
+AMR occurs when antibiotics used to treat bacterial infections are no longer effective, leading to increased death risk caused by antibiotic resistant bacteria (ARB). Resistance selection and de novo resistance development can be acquired by mutation or horizontal transfer of antibiotic resistance genes (ARG), not only above the minimum inhibitory concentration of the susceptible strain but also at sub-inhibitory concentrations of antibiotics. This minimal selective concentration (MSC) has been defined as the concentration at which the resistant strain acquires competitive advantage in growth relative to the susceptible strain. Municipal wastewater treatment plants (WWTPs) are “hotspots” for AMR dissemination because they are major sources of ARG, along with residues of antibiotics at concentrations that selects for resistance. Non- antibiotic chemical contaminants may also trigger horizontal gene transfer and enhance prevalence of AMR; metals may indirectly select for antibiotic resistance, and non-antibiotic pharmaceuticals can induce mutations. Concentrations of antibiotics in WWTPs are dynamic and sub-inhibitory, highlighting the need to understand AMR selection in this system. In this proposal, we will use “rules” of selection to predict for AMR emergence in WWTPs with varying temperature and chemical stressors. Our overall objective is to develop models that describe the selection of resistance in WWTP activated sludge to azithromycin and ciprofloxacin as test antibiotics. Our central hypothesis is that different environmental factors, such as temperature, heavy metals, and other contaminants influence the selection of AMR at sub-inhibitory antibiotic concentrations typically found in the environment.
+
+## Collaborators 
+Diana Aga, University of Buffalo (PI)
+Laura Jarboe, ISU
+Shannon Seneca, University of Buffalo
+Liqing Zhang, Virgina Tech
+
+## Funding
+NSF
