--- a/_research/1.cobs.md
+++ b/_research/1.cobs.md
@@ -17,7 +17,9 @@ We hope to improve understanding of the underlying mechanisms governing plant-so
 
 ## Collaborators
 Emily Heaton, ISU
+Marshall McDaniel, ISU
 Andrew Vanloocke, ISU
+
 
 ## Funding
 
