--- a/_research/2.amr_evo.md
+++ b/_research/2.amr_evo.md
@@ -1,8 +1,8 @@
 ---
 title: Development of Antibiotic Resistance
 image: 
-  path: /images/resistance.jpg
-  thumbnail: /images/resistance.jpg
+  path: /images/IMG_20230524_130515392.jpg
+  thumbnail: /images/IMG_20230524_130515392.jpg
   caption: ""
 ---
 
