--- a/_research/0.darte.md
+++ b/_research/0.darte.md
@@ -6,7 +6,7 @@ image:
   caption: ""
 ---
 
-# The Scoop On Poop: Connecting Manure Management To Antimicrobial Resistance
+## The Scoop On Poop: Connecting Manure Management To Antimicrobial Resistance
 
 The global spread of antimicrobial-resistant (AMR) organisms and spread of AMR-associated genes poses a serious threat to the safety of our food and public health while being responsible for increased hospitalization and mortality of both humans and production animals.  The release of AMR genes and organisms and microbes in the environment from agricultural sources is considered a serious threat but little is known about their persistence and spread in the environment.  
 
@@ -21,23 +21,4 @@ Michelle Soupir, ISU
 ## Funding
 USDA NIFA  
 
-# Connecting Antimicrobial Resistance, Agricultural Decisions, And Environmental Systems (CAMRADES)
 
-Our project will inform the effectiveness of mitigation strategies in reducing risk to human
-health in agro-ecosystems by developing an adaptable framework, CAMRADES. We will
-integrate predictive models of AMR transport and associated risk to human health, and improve
-stakeholder understanding of AMR, potential risks and mitigation strategies. Our framework integrates detection of antibiotics, AMR genes and indicator organisms and
-exposure pathways in the environment with hydrologic and water quality monitoring. A key
-output of this effort will be a predictive model of antibiotic and AMR sources, fate, and
-transport, which will be integrated with a novel risk assessment
-
-## Collaborators
-Michelle Soupir, ISU (PI)
-Daniel Andersen, ISU
-Diana Aga, University of Buffalo
-Shannon Bartelt-Hunt (University of Nebraska - Lincoln)
-Amy Schmidt (University of Nebraska - Lincoln)
-Bing Wang (University of Nebraska - Lincoln)
-
-## Funding
-USDA
