--- a/_research/3.camrades.md
+++ b/_research/3.camrades.md
@@ -1,3 +1,11 @@
+---
+title: Antibiotic Resistance in the Environment
+image: 
+  path: /images/1-s2.0-S0048969720337451-ga1_lrg.jpg
+  thumbnail: /images/1-s2.0-S0048969720337451-ga1_lrg.jpg
+  caption: ""
+---
+
 # Connecting Antimicrobial Resistance, Agricultural Decisions, And Environmental Systems (CAMRADES)
 
 Our project will inform the effectiveness of mitigation strategies in reducing risk to human
