--- a/_research/0b.cabbi.md
+++ b/_research/0b.cabbi.md
@@ -5,7 +5,10 @@ image:
   thumbnail: /images/misc.jpg
   caption: ""
 ---
-"Have you ever wondered about life on a leaf?" Great Lakes Bioenergy Research Center (GLBRC) researcher Ashley Shade asks a simple question, but it's one well worth investigation.
+
+## "Have you ever wondered about life on a leaf?" 
+
+Great Lakes Bioenergy Research Center (GLBRC) researcher Ashley Shade asks a simple question, but it's one well worth investigation.
 
 The aboveground part of plants where microbes reside, or the phyllosphere, represents the largest environmental surface area on the plant. Much of this area is grown as cultivated agriculture, and understanding the interactions between plants and the microorganisms that live on their surfaces may help us develop agricultural management practices that can increase crop productivity and resilience.
 
