--- a/_research/5.forestry.md
+++ b/_research/5.forestry.md
@@ -1,8 +1,8 @@
 ---
 title: Forestry on Tap
 image: 
-  path: 
-  thumbnail: 
+  path: /images/sampling.jpg
+  thumbnail: /images/sampling.jpg
   caption: ""
 ---
 
