--- a/_research/5.forestry.md
+++ b/_research/5.forestry.md
@@ -14,6 +14,8 @@ Woodchip bioreactors treat nitrate-laden tile drainage water and improve water q
 
 To address this gap, this project aims to integrate research and extension work with Iowa Learning Farms to better understand how carbon and nitrogen are balanced in a bioreactor. This will be achieved by identifying and characterizing individual woodchip species and quantifying wood extractives that can influence bioreactor performance. The project will systematically investigate the physical, chemical, and biological properties of individual wood species, including wood extracts, the wood microbiome, and nitrate removal efficiency to identify the drivers and dynamics of nitrate removal in bioreactors. Ultimately, the goal is to create woodchip blends from high-performing wood species based on N removal, labile carbon availability, and local wood availability and supply. By understanding the shared benefits of woodland management and water quality conservation, the project aims to improve the quality and resilience of integrated agricultural and forest ecosystems.
 
+[Watch a video about this work...](https://youtu.be/S72Vu1Nbu8E?si=B4FN26G3PW8WjNfz)
+
 ## Collaborators 
 Michelle Soupir, ISU; 
 
